tests/sksl/errors/PrecisionQualifiersDisallowed.glsl
### Compilation failed:

error: 2: precision qualifiers are not allowed
void h() { highp int x; }
           ^^^^^
error: 3: precision qualifiers are not allowed
void m() { mediump int x; }
           ^^^^^^^
error: 4: precision qualifiers are not allowed
void l() { lowp int x; }
           ^^^^
3 errors
